--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<div class="block5">
 				<img src="img/img7.jpg" alt="">
 				<span>Python</span>
-				<p>Lorem ipsum dolor si.</p>
+				<p>Lorem ipsum dolor sihhh.</p>
 			</div>
 			</div>
 
